css/main.css
html {
  box-sizing: border-box;
  font-family: Karma, serif;
  line-height: 1.5;
}

*,*::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

h2 {
  font-family: "Oswald", sans-serif;
  color: #6f00e7;
  font-size: 2rem;
  margin: 0;
}

p {
  text-align: center;
  font-size: 1.4rem;
  margin: 0 0 1.5rem;
}

ol {
  display: grid;
  list-style: none;
  grid-template-columns: 1fr 1fr;
  margin: 0;
  padding: 0;
  gap: 1rem;
}

ol > li {
  display: flex;
  flex-direction: column;
  border: 3px solid #987ffa;
  border-radius: 6px;
  padding: 1rem;
  justify-content: space-between;
  align-items: center;
}

h2 + img {
  order: -1;
  max-width: 15em;
  margin-bottom: 1.5rem;
}

ol ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
}

